# Client-Bank-Term-Deposit-ML-

./: README.md  notebook.ipynb  pyproject.toml
